# CXXLab1

./: .gitignore
lab1_1/: CMakeLists.txt  lab1_1.cpp
lab1_2/: CMakeLists.txt  lab1_2.cpp
lab1_3/: CMakeLists.txt  lab1_3.cpp
lab1_4/: CMakeLists.txt  lab1_4.cpp
lab1_5/: CMakeLists.txt  lab1_5.cpp
